# funnymic

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  package.json  pnpm-lock.yaml  shell.nix
.github/workflows/: main.yml
src/: App.css  App.tsx  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keys.rs  lib.rs  main.rs  painputswapper.rs  swapper.rs  wininputswapper.rs
src/components/: KeyComboButton.tsx
